<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cliente">

    <fragment
        android:id="@+id/navigation_cliente"
        android:name="br.com.halsservice.ui.cliente.ClienteFragment"
        android:label="@string/title_cliente"
        tools:layout="@layout/fragment_cliente" >
        <action
            android:id="@+id/action_navigation_cliente_to_navigation_cadastro_cliente"
            app:destination="@id/navigation_cadastro_cliente"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_servico"
        android:name="br.com.halsservice.ui.servico.ServicoFragment"
        android:label="@string/title_servico"
        tools:layout="@layout/fragment_servico" >
        <action
            android:id="@+id/action_navigation_servico_to_navigation_cadastro_servico"
            app:destination="@id/navigation_cadastro_servico" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cadastro_cliente"
        android:name="br.com.halsservice.ui.cliente.CadastroClienteFragment"
        tools:layout="@layout/fragment_cadastro_cliente" >
        <action
            android:id="@+id/action_navigation_cadastro_cliente_to_navigation_cliente"
            app:destination="@id/navigation_cliente"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
        <argument
            android:name="cliente"
            app:argType="br.com.halsservice.ui.cliente.ClienteArgs"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cadastro_servico"
        android:name="br.com.halsservice.ui.servico.CadastroServicoFragment"
        android:label="@string/title_cadastro_servico"
        tools:layout="@layout/fragment_cadastro_servico" >
        <action
            android:id="@+id/action_navigation_cadastro_servico_to_navigation_servico"
            app:destination="@id/navigation_servico" />
    </fragment>

</navigation>