<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.cliente.CadastroClienteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campo_cep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint="@string/busca_cep"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_mask="#####-###"
                android:inputType="number"
                android:layout_margin="5dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/busca"
            style="@style/MeuBotao"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:text="@string/buscar"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/campo_cep"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/campo_cep" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nome"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/constraint_layout"
        app:layout_constraintStart_toStartOf="@+id/constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout"
        app:startIconDrawable="@drawable/ic_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_endereco"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/endereco"
        app:layout_constraintEnd_toEndOf="@+id/campo_nome"
        app:layout_constraintStart_toStartOf="@+id/campo_nome"
        app:layout_constraintTop_toBottomOf="@+id/campo_nome"
        app:startIconDrawable="@drawable/ic_map">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_numero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/numero"
        app:layout_constraintEnd_toEndOf="@+id/campo_endereco"
        app:layout_constraintStart_toStartOf="@+id/campo_endereco"
        app:layout_constraintTop_toBottomOf="@+id/campo_endereco"
        app:startIconDrawable="@drawable/ic_numeric">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_bairro"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bairro"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/campo_numero"
        app:layout_constraintTop_toBottomOf="@+id/campo_numero"
        app:startIconDrawable="@drawable/ic_map_marker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_telefone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        app:layout_constraintEnd_toEndOf="@+id/campo_numero"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/campo_bairro"
        app:startIconDrawable="@drawable/ic_cellphone">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_mask="#####-####"
            android:inputType="number"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cadastro_atualizacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_selector"
        android:text="@string/cadastrar_cliente"
        app:icon="@drawable/ic_account"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/campo_telefone"
        app:layout_constraintStart_toStartOf="@+id/campo_bairro" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_ddd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ddd"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/campo_bairro"
        app:layout_constraintTop_toBottomOf="@+id/campo_bairro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ddd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_estado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/estado"
        app:layout_constraintBottom_toBottomOf="@+id/campo_bairro"
        app:layout_constraintEnd_toEndOf="@+id/campo_numero"
        app:layout_constraintStart_toEndOf="@+id/campo_bairro"
        app:layout_constraintTop_toTopOf="@+id/campo_bairro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="campo_bairro, campo_ddd, campo_endereco, campo_numero, campo_estado,campo_telefone,campo_nome"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/campo_telefone"
        app:layout_constraintEnd_toEndOf="@+id/campo_nome"
        app:layout_constraintStart_toStartOf="@+id/campo_nome"
        app:layout_constraintTop_toBottomOf="@+id/campo_nome" />


</androidx.constraintlayout.widget.ConstraintLayout>